; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_pcie.c_al_pcie_msi_int_gen.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_pcie.c_al_pcie_msi_int_gen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.al_pcie_pf = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.al_pcie_regs* }
%struct.al_pcie_regs = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@PCIE_W_GLOBAL_CTRL_EVENTS_GEN_MSI_VECTOR_MASK = common dso_local global i32 0, align 4
@PCIE_W_GLOBAL_CTRL_EVENTS_GEN_MSI_VECTOR_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @al_pcie_msi_int_gen(%struct.al_pcie_pf* %0, i32 %1) #0 {
  %3 = alloca %struct.al_pcie_pf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.al_pcie_regs*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.al_pcie_pf* %0, %struct.al_pcie_pf** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.al_pcie_pf*, %struct.al_pcie_pf** %3, align 8
  %9 = getelementptr inbounds %struct.al_pcie_pf, %struct.al_pcie_pf* %8, i32 0, i32 1
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = load %struct.al_pcie_regs*, %struct.al_pcie_regs** %11, align 8
  store %struct.al_pcie_regs* %12, %struct.al_pcie_regs** %5, align 8
  %13 = load %struct.al_pcie_pf*, %struct.al_pcie_pf** %3, align 8
  %14 = getelementptr inbounds %struct.al_pcie_pf, %struct.al_pcie_pf* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  store i32 %15, i32* %6, align 4
  %16 = load %struct.al_pcie_regs*, %struct.al_pcie_regs** %5, align 8
  %17 = getelementptr inbounds %struct.al_pcie_regs, %struct.al_pcie_regs* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %6, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @al_reg_read32(i32 %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @AL_REG_BIT_CLEAR(i32 %26, i32 4)
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* @PCIE_W_GLOBAL_CTRL_EVENTS_GEN_MSI_VECTOR_MASK, align 4
  %30 = load i32, i32* @PCIE_W_GLOBAL_CTRL_EVENTS_GEN_MSI_VECTOR_SHIFT, align 4
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @AL_REG_FIELD_SET(i32 %28, i32 %29, i32 %30, i32 %31)
  %33 = load %struct.al_pcie_regs*, %struct.al_pcie_regs** %5, align 8
  %34 = getelementptr inbounds %struct.al_pcie_regs, %struct.al_pcie_regs* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i32*, i32** %36, align 8
  %38 = load i32, i32* %6, align 4
  %39 = zext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @al_reg_write32(i32 %41, i32 %42)
  %44 = load i32, i32* %7, align 4
  %45 = call i32 @AL_REG_BIT_SET(i32 %44, i32 4)
  %46 = load %struct.al_pcie_regs*, %struct.al_pcie_regs** %5, align 8
  %47 = getelementptr inbounds %struct.al_pcie_regs, %struct.al_pcie_regs* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i32*, i32** %49, align 8
  %51 = load i32, i32* %6, align 4
  %52 = zext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %50, i64 %52
  %54 = load i32, i32* %53, align 4
  %55 = load i32, i32* %7, align 4
  %56 = call i32 @al_reg_write32(i32 %54, i32 %55)
  ret i32 0
}

declare dso_local i32 @al_reg_read32(i32) #1

declare dso_local i32 @AL_REG_BIT_CLEAR(i32, i32) #1

declare dso_local i32 @AL_REG_FIELD_SET(i32, i32, i32, i32) #1

declare dso_local i32 @al_reg_write32(i32, i32) #1

declare dso_local i32 @AL_REG_BIT_SET(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
